server/src/qasm/antlr/QasmParser.js
"use strict";
// Generated from src/qasm/antlr/Qasm.g4 by ANTLR 4.6-SNAPSHOT
var __decorate = (this && this.__decorate) || function (decorators, target, key, desc) {
    var c = arguments.length, r = c < 3 ? target : desc === null ? desc = Object.getOwnPropertyDescriptor(target, key) : desc, d;
    if (typeof Reflect === "object" && typeof Reflect.decorate === "function") r = Reflect.decorate(decorators, target, key, desc);
    else for (var i = decorators.length - 1; i >= 0; i--) if (d = decorators[i]) r = (c < 3 ? d(r) : c > 3 ? d(target, key, r) : d(target, key)) || r;
    return c > 3 && r && Object.defineProperty(target, key, r), r;
};
Object.defineProperty(exports, "__esModule", { value: true });
class SymbolsTable {
    constructor() {
        this.qregs = [];
        this.cregs = [];
    }
}
const ATN_1 = require("antlr4ts/atn/ATN");
const ATNDeserializer_1 = require("antlr4ts/atn/ATNDeserializer");
const FailedPredicateException_1 = require("antlr4ts/FailedPredicateException");
const Decorators_1 = require("antlr4ts/Decorators");
const NoViableAltException_1 = require("antlr4ts/NoViableAltException");
const Decorators_2 = require("antlr4ts/Decorators");
const Parser_1 = require("antlr4ts/Parser");
const ParserRuleContext_1 = require("antlr4ts/ParserRuleContext");
const ParserATNSimulator_1 = require("antlr4ts/atn/ParserATNSimulator");
const RecognitionException_1 = require("antlr4ts/RecognitionException");
const RuleVersion_1 = require("antlr4ts/RuleVersion");
const Token_1 = require("antlr4ts/Token");
const VocabularyImpl_1 = require("antlr4ts/VocabularyImpl");
const Utils = require("antlr4ts/misc/Utils");
class QasmParser extends Parser_1.Parser {
    constructor(input) {
        super(input);
        this.symbolsTable = new SymbolsTable();
        this._interp = new ParserATNSimulator_1.ParserATNSimulator(QasmParser._ATN, this);
    }
    get vocabulary() {
        return QasmParser.VOCABULARY;
    }
    get grammarFileName() { return "Qasm.g4"; }
    get ruleNames() { return QasmParser.ruleNames; }
    get serializedATN() { return QasmParser._serializedATN; }
    declareCreg(input) {
        this.symbolsTable.cregs.push(input.text);
    }
    declareQreg(input) {
        this.symbolsTable.qregs.push(input.text);
    }
    declaredVariables() {
        let result = [];
        result.push(...this.symbolsTable.qregs);
        result.push(...this.symbolsTable.cregs);
        return result;
    }
    code() {
        let _localctx = new CodeContext(this._ctx, this.state);
        this.enterRule(_localctx, 0, QasmParser.RULE_code);
        try {
            this.state = 65;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case QasmParser.EOF:
                case QasmParser.Qreg:
                case QasmParser.Creg:
                case QasmParser.Cx:
                case QasmParser.Measure:
                case QasmParser.Barrier:
                case QasmParser.Reset:
                case QasmParser.Opaque:
                case QasmParser.If:
                case QasmParser.Gate:
                case QasmParser.Id:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 60;
                        this.sentences();
                    }
                    break;
                case QasmParser.QasmDescriptor:
                case QasmParser.Include:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 61;
                        this.headers();
                        this.state = 62;
                        this.sentences();
                    }
                    break;
                case QasmParser.Clean:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 64;
                        this.clean();
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    headers() {
        let _localctx = new HeadersContext(this._ctx, this.state);
        this.enterRule(_localctx, 2, QasmParser.RULE_headers);
        try {
            this.state = 71;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 1, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 67;
                        this.match(QasmParser.QasmDescriptor);
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 68;
                        this.match(QasmParser.QasmDescriptor);
                        this.state = 69;
                        this.match(QasmParser.Include);
                    }
                    break;
                case 3:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 70;
                        this.match(QasmParser.Include);
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    sentences() {
        let _localctx = new SentencesContext(this._ctx, this.state);
        this.enterRule(_localctx, 4, QasmParser.RULE_sentences);
        try {
            this.state = 77;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 2, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 73;
                        this.sentence();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 74;
                        this.sentence();
                        this.state = 75;
                        this.sentences();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    clean() {
        let _localctx = new CleanContext(this._ctx, this.state);
        this.enterRule(_localctx, 6, QasmParser.RULE_clean);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 79;
                this.match(QasmParser.Clean);
                this.state = 80;
                this.match(QasmParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    sentence() {
        let _localctx = new SentenceContext(this._ctx, this.state);
        this.enterRule(_localctx, 8, QasmParser.RULE_sentence);
        try {
            this.state = 88;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case QasmParser.Qreg:
                case QasmParser.Creg:
                case QasmParser.Opaque:
                case QasmParser.Gate:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 82;
                        this.definition();
                    }
                    break;
                case QasmParser.Cx:
                case QasmParser.Measure:
                case QasmParser.Barrier:
                case QasmParser.Reset:
                case QasmParser.Id:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 83;
                        this.expression();
                    }
                    break;
                case QasmParser.If:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 84;
                        this.conditional();
                        this.state = 85;
                        this.expression();
                    }
                    break;
                case QasmParser.EOF:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 87;
                        this.match(QasmParser.EOF);
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    definition() {
        let _localctx = new DefinitionContext(this._ctx, this.state);
        this.enterRule(_localctx, 10, QasmParser.RULE_definition);
        try {
            this.state = 106;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case QasmParser.Qreg:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 90;
                        this.match(QasmParser.Qreg);
                        this.state = 91;
                        _localctx._Id = this.match(QasmParser.Id);
                        this.declareQreg(_localctx._Id);
                        this.state = 93;
                        this.qLine();
                        this.state = 94;
                        this.match(QasmParser.Semi);
                    }
                    break;
                case QasmParser.Creg:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 96;
                        this.match(QasmParser.Creg);
                        this.state = 97;
                        _localctx._Id = this.match(QasmParser.Id);
                        this.declareCreg(_localctx._Id);
                        this.state = 99;
                        this.qLine();
                        this.state = 100;
                        this.match(QasmParser.Semi);
                    }
                    break;
                case QasmParser.Gate:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 102;
                        this.gateDefinition();
                    }
                    break;
                case QasmParser.Opaque:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 103;
                        this.opaqueDefinition();
                        this.state = 104;
                        this.match(QasmParser.Semi);
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    expression() {
        let _localctx = new ExpressionContext(this._ctx, this.state);
        this.enterRule(_localctx, 12, QasmParser.RULE_expression);
        try {
            this.state = 123;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case QasmParser.Measure:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 108;
                        this.measure();
                        this.state = 109;
                        this.match(QasmParser.Semi);
                    }
                    break;
                case QasmParser.Id:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 111;
                        this.customArglist();
                        this.state = 112;
                        this.match(QasmParser.Semi);
                    }
                    break;
                case QasmParser.Cx:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 114;
                        this.cxGate();
                        this.state = 115;
                        this.match(QasmParser.Semi);
                    }
                    break;
                case QasmParser.Barrier:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 117;
                        this.barrierGate();
                        this.state = 118;
                        this.match(QasmParser.Semi);
                    }
                    break;
                case QasmParser.Reset:
                    this.enterOuterAlt(_localctx, 5);
                    {
                        this.state = 120;
                        this.resetGate();
                        this.state = 121;
                        this.match(QasmParser.Semi);
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    conditional() {
        let _localctx = new ConditionalContext(this._ctx, this.state);
        this.enterRule(_localctx, 14, QasmParser.RULE_conditional);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 125;
                this.match(QasmParser.If);
                this.state = 126;
                this.match(QasmParser.LeftParen);
                this.state = 127;
                this.match(QasmParser.Id);
                this.state = 128;
                this.match(QasmParser.Equals);
                this.state = 129;
                this.match(QasmParser.Int);
                this.state = 130;
                this.match(QasmParser.RightParen);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    qLine() {
        let _localctx = new QLineContext(this._ctx, this.state);
        this.enterRule(_localctx, 16, QasmParser.RULE_qLine);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 132;
                this.match(QasmParser.LeftBrace);
                this.state = 133;
                this.match(QasmParser.Int);
                this.state = 134;
                this.match(QasmParser.RightBrace);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    gateDefinition() {
        let _localctx = new GateDefinitionContext(this._ctx, this.state);
        this.enterRule(_localctx, 18, QasmParser.RULE_gateDefinition);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 136;
                this.match(QasmParser.Gate);
                this.state = 137;
                this.match(QasmParser.Id);
                this.state = 138;
                this.gateDefinitionArguments();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    opaqueDefinition() {
        let _localctx = new OpaqueDefinitionContext(this._ctx, this.state);
        this.enterRule(_localctx, 20, QasmParser.RULE_opaqueDefinition);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 140;
                this.match(QasmParser.Opaque);
                this.state = 141;
                this.match(QasmParser.Id);
                this.state = 142;
                this.opaqueDefinitionArguments();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    gateDefinitionArguments() {
        let _localctx = new GateDefinitionArgumentsContext(this._ctx, this.state);
        this.enterRule(_localctx, 22, QasmParser.RULE_gateDefinitionArguments);
        try {
            this.state = 181;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 6, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 144;
                        this.paramsList();
                        this.state = 145;
                        this.match(QasmParser.LeftCurlyBrace);
                        this.state = 146;
                        this.body();
                        this.state = 147;
                        this.match(QasmParser.RightCurlyBrace);
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 149;
                        this.match(QasmParser.LeftParen);
                        this.state = 150;
                        this.paramsList();
                        this.state = 151;
                        this.match(QasmParser.RightParen);
                        this.state = 152;
                        this.paramsList();
                        this.state = 153;
                        this.match(QasmParser.LeftCurlyBrace);
                        this.state = 154;
                        this.body();
                        this.state = 155;
                        this.match(QasmParser.RightCurlyBrace);
                    }
                    break;
                case 3:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 157;
                        this.match(QasmParser.LeftParen);
                        this.state = 158;
                        this.paramsList();
                        this.state = 159;
                        this.match(QasmParser.RightParen);
                        this.state = 160;
                        this.paramsList();
                        this.state = 161;
                        this.match(QasmParser.LeftCurlyBrace);
                        this.state = 162;
                        this.match(QasmParser.RightCurlyBrace);
                    }
                    break;
                case 4:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 164;
                        this.match(QasmParser.LeftParen);
                        this.state = 165;
                        this.match(QasmParser.RightParen);
                        this.state = 166;
                        this.paramsList();
                        this.state = 167;
                        this.match(QasmParser.LeftCurlyBrace);
                        this.state = 168;
                        this.match(QasmParser.RightCurlyBrace);
                    }
                    break;
                case 5:
                    this.enterOuterAlt(_localctx, 5);
                    {
                        this.state = 170;
                        this.match(QasmParser.LeftParen);
                        this.state = 171;
                        this.match(QasmParser.RightParen);
                        this.state = 172;
                        this.paramsList();
                        this.state = 173;
                        this.match(QasmParser.LeftCurlyBrace);
                        this.state = 174;
                        this.body();
                        this.state = 175;
                        this.match(QasmParser.RightCurlyBrace);
                    }
                    break;
                case 6:
                    this.enterOuterAlt(_localctx, 6);
                    {
                        this.state = 177;
                        this.paramsList();
                        this.state = 178;
                        this.match(QasmParser.LeftCurlyBrace);
                        this.state = 179;
                        this.match(QasmParser.RightCurlyBrace);
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    opaqueDefinitionArguments() {
        let _localctx = new OpaqueDefinitionArgumentsContext(this._ctx, this.state);
        this.enterRule(_localctx, 24, QasmParser.RULE_opaqueDefinitionArguments);
        try {
            this.state = 189;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case QasmParser.Id:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 183;
                        this.paramsList();
                    }
                    break;
                case QasmParser.LeftParen:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 184;
                        this.match(QasmParser.LeftParen);
                        this.state = 185;
                        this.paramsList();
                        this.state = 186;
                        this.match(QasmParser.RightParen);
                        this.state = 187;
                        this.paramsList();
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    paramsList() {
        let _localctx = new ParamsListContext(this._ctx, this.state);
        this.enterRule(_localctx, 26, QasmParser.RULE_paramsList);
        try {
            this.state = 195;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 8, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 191;
                        this.match(QasmParser.Id);
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 192;
                        this.match(QasmParser.Id);
                        this.state = 193;
                        this.match(QasmParser.Comma);
                        this.state = 194;
                        this.paramsList();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    body() {
        let _localctx = new BodyContext(this._ctx, this.state);
        this.enterRule(_localctx, 28, QasmParser.RULE_body);
        try {
            this.state = 201;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 9, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 197;
                        this.bodyExpression();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 198;
                        this.bodyExpression();
                        this.state = 199;
                        this.body();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    bodyExpression() {
        let _localctx = new BodyExpressionContext(this._ctx, this.state);
        this.enterRule(_localctx, 30, QasmParser.RULE_bodyExpression);
        try {
            this.state = 225;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 10, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 203;
                        this.match(QasmParser.Cx);
                        this.state = 204;
                        this.paramsList();
                        this.state = 205;
                        this.match(QasmParser.Semi);
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 207;
                        this.match(QasmParser.U);
                        this.state = 208;
                        this.match(QasmParser.LeftParen);
                        this.state = 209;
                        this.paramsListBody(0);
                        this.state = 210;
                        this.match(QasmParser.RightParen);
                        this.state = 211;
                        this.paramsList();
                        this.state = 212;
                        this.match(QasmParser.Semi);
                    }
                    break;
                case 3:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 214;
                        this.match(QasmParser.Id);
                        this.state = 215;
                        this.paramsList();
                        this.state = 216;
                        this.match(QasmParser.Semi);
                    }
                    break;
                case 4:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 218;
                        this.match(QasmParser.Id);
                        this.state = 219;
                        this.match(QasmParser.LeftParen);
                        this.state = 220;
                        this.paramsListBody(0);
                        this.state = 221;
                        this.match(QasmParser.RightParen);
                        this.state = 222;
                        this.paramsList();
                        this.state = 223;
                        this.match(QasmParser.Semi);
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    paramsListBody(_p) {
        if (_p === undefined) {
            _p = 0;
        }
        let _parentctx = this._ctx;
        let _parentState = this.state;
        let _localctx = new ParamsListBodyContext(this._ctx, _parentState);
        let _prevctx = _localctx;
        let _startState = 32;
        this.enterRecursionRule(_localctx, 32, QasmParser.RULE_paramsListBody, _p);
        try {
            let _alt;
            this.enterOuterAlt(_localctx, 1);
            {
                {
                    this.state = 228;
                    this.exp(0);
                }
                this._ctx._stop = this._input.tryLT(-1);
                this.state = 235;
                this._errHandler.sync(this);
                _alt = this.interpreter.adaptivePredict(this._input, 11, this._ctx);
                while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        if (this._parseListeners != null)
                            this.triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new ParamsListBodyContext(_parentctx, _parentState);
                                this.pushNewRecursionContext(_localctx, _startState, QasmParser.RULE_paramsListBody);
                                this.state = 230;
                                if (!(this.precpred(this._ctx, 1)))
                                    throw new FailedPredicateException_1.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
                                this.state = 231;
                                this.match(QasmParser.Comma);
                                this.state = 232;
                                this.exp(0);
                            }
                        }
                    }
                    this.state = 237;
                    this._errHandler.sync(this);
                    _alt = this.interpreter.adaptivePredict(this._input, 11, this._ctx);
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }
    exp(_p) {
        if (_p === undefined) {
            _p = 0;
        }
        let _parentctx = this._ctx;
        let _parentState = this.state;
        let _localctx = new ExpContext(this._ctx, _parentState);
        let _prevctx = _localctx;
        let _startState = 34;
        this.enterRecursionRule(_localctx, 34, QasmParser.RULE_exp, _p);
        try {
            let _alt;
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 254;
                this._errHandler.sync(this);
                switch (this._input.LA(1)) {
                    case QasmParser.Int:
                        {
                            this.state = 239;
                            this.match(QasmParser.Int);
                        }
                        break;
                    case QasmParser.Real:
                        {
                            this.state = 240;
                            this.match(QasmParser.Real);
                        }
                        break;
                    case QasmParser.Pi:
                        {
                            this.state = 241;
                            this.match(QasmParser.Pi);
                        }
                        break;
                    case QasmParser.Id:
                        {
                            this.state = 242;
                            this.match(QasmParser.Id);
                        }
                        break;
                    case QasmParser.Sin:
                    case QasmParser.Cos:
                    case QasmParser.Tan:
                    case QasmParser.Exp:
                    case QasmParser.Ln:
                    case QasmParser.Sqrt:
                        {
                            this.state = 243;
                            this.unaryOp();
                            this.state = 244;
                            this.match(QasmParser.LeftParen);
                            this.state = 245;
                            this.exp(0);
                            this.state = 246;
                            this.match(QasmParser.RightParen);
                        }
                        break;
                    case QasmParser.Subs:
                        {
                            this.state = 248;
                            this.match(QasmParser.Subs);
                            this.state = 249;
                            this.exp(7);
                        }
                        break;
                    case QasmParser.LeftParen:
                        {
                            this.state = 250;
                            this.match(QasmParser.LeftParen);
                            this.state = 251;
                            this.exp(0);
                            this.state = 252;
                            this.match(QasmParser.RightParen);
                        }
                        break;
                    default:
                        throw new NoViableAltException_1.NoViableAltException(this);
                }
                this._ctx._stop = this._input.tryLT(-1);
                this.state = 273;
                this._errHandler.sync(this);
                _alt = this.interpreter.adaptivePredict(this._input, 14, this._ctx);
                while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        if (this._parseListeners != null)
                            this.triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            this.state = 271;
                            this._errHandler.sync(this);
                            switch (this.interpreter.adaptivePredict(this._input, 13, this._ctx)) {
                                case 1:
                                    {
                                        _localctx = new ExpContext(_parentctx, _parentState);
                                        this.pushNewRecursionContext(_localctx, _startState, QasmParser.RULE_exp);
                                        this.state = 256;
                                        if (!(this.precpred(this._ctx, 5)))
                                            throw new FailedPredicateException_1.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
                                        this.state = 257;
                                        this.match(QasmParser.Sum);
                                        this.state = 258;
                                        this.exp(6);
                                    }
                                    break;
                                case 2:
                                    {
                                        _localctx = new ExpContext(_parentctx, _parentState);
                                        this.pushNewRecursionContext(_localctx, _startState, QasmParser.RULE_exp);
                                        this.state = 259;
                                        if (!(this.precpred(this._ctx, 4)))
                                            throw new FailedPredicateException_1.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
                                        this.state = 260;
                                        this.match(QasmParser.Subs);
                                        this.state = 261;
                                        this.exp(5);
                                    }
                                    break;
                                case 3:
                                    {
                                        _localctx = new ExpContext(_parentctx, _parentState);
                                        this.pushNewRecursionContext(_localctx, _startState, QasmParser.RULE_exp);
                                        this.state = 262;
                                        if (!(this.precpred(this._ctx, 3)))
                                            throw new FailedPredicateException_1.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
                                        this.state = 263;
                                        this.match(QasmParser.Mult);
                                        this.state = 264;
                                        this.exp(4);
                                    }
                                    break;
                                case 4:
                                    {
                                        _localctx = new ExpContext(_parentctx, _parentState);
                                        this.pushNewRecursionContext(_localctx, _startState, QasmParser.RULE_exp);
                                        this.state = 265;
                                        if (!(this.precpred(this._ctx, 2)))
                                            throw new FailedPredicateException_1.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
                                        this.state = 266;
                                        this.match(QasmParser.Div);
                                        this.state = 267;
                                        this.exp(3);
                                    }
                                    break;
                                case 5:
                                    {
                                        _localctx = new ExpContext(_parentctx, _parentState);
                                        this.pushNewRecursionContext(_localctx, _startState, QasmParser.RULE_exp);
